Clone app repository

--- a/src/CommunicationControl/DevOpsProject.HiveMind.API/appsettings.json
+++ b/src/CommunicationControl/DevOpsProject.HiveMind.API/appsettings.json
@@ -2,7 +2,7 @@
 
   "CommunicationConfiguration": {
     "RequestSchema": "http",
-    "CommunicationControlIP": "localhost",
+    "CommunicationControlIP": "communication-control",
     "CommunicationControlPort": 8080,
     "CommunicationControlPath": "api/v1/hive",
     "HiveIP": "localhost",
