--- a/src/CommunicationControl/DevOpsProject/appsettings.json
+++ b/src/CommunicationControl/DevOpsProject/appsettings.json
@@ -1,6 +1,6 @@
 {
   "Redis": {
-    "ConnectionString": "localhost:6379",
+    "ConnectionString": "redis:6379",
     "PublishChannel": "HiveChannel"
   },
   "RedisKeys": {
