--- a/src/CommunicationControl/DevOpsProject/Dockerfile
+++ b/src/CommunicationControl/DevOpsProject/Dockerfile
@@ -1,13 +1,14 @@
+﻿FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+WORKDIR /src
+
+COPY . .
+
+RUN dotnet restore src/CommunicationControl/DevOpsProject.sln
+RUN dotnet publish src/CommunicationControl/DevOpsProject/DevOpsProject.CommunicationControl.API.csproj -c Release -o /app/publish
+
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS runtime
 WORKDIR /app
-
-RUN groupadd --gid 1000 appuser && \  
-    useradd --uid 1000 --gid appuser --shell /bin/bash --create-home appuser  
-
-COPY --chown=appuser:appuser published/ ./
-
-USER appuser
-
-EXPOSE 8080
-
+COPY --from=build /app/publish .
+ENV ASPNETCORE_URLS=http://+:8000
+EXPOSE 8000
 ENTRYPOINT ["dotnet", "DevOpsProject.CommunicationControl.API.dll"]
