--- a/src/MapClient/Dockerfile
+++ b/src/MapClient/Dockerfile
@@ -1,8 +1,16 @@
+﻿FROM node:20 AS build
+WORKDIR /app
+
+COPY package*.json ./
+RUN npm install
+COPY . .
+
+ARG VITE_API_BASE_URL
+ENV VITE_API_BASE_URL=$VITE_API_BASE_URL
+
+RUN npm run build
+
 FROM nginx:alpine
-
-COPY ./dist /usr/share/nginx/html
-
-RUN rm -f /usr/share/nginx/html/config.json
-
+COPY --from=build /app/dist /usr/share/nginx/html
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
